--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,21 +22,19 @@
         <form class="form" action="/" method="post">
           <div class="form-element">
             <label for="amount">Amount:</label>
-            <input type="number" id="amount" />
+            <input type="number" id="amount" name="amount" />
           </div>
 
           <div class="form-element">
             <label for="from">From:</label>
-            <select name="currencies" id="from">
-              <% keys.forEach((key, index) => { %>
+            <select name="fromCurrency" id="from">
+              <!-- loop through an object -->
+              <% if(locals.result && locals.keys) { keys.forEach((key, index) =>
+              {%>
               <option value="<%= key %>">
                 <%= `${key} - ${result[key]}` %>
               </option>
-              <% }); %>
-              <!-- <option value="eur">EUR</option>
-              <option value="usd">USD</option>
-              <option value="gbp">GBP</option>
-              <option value="pln">PLN</option> -->
+              <% }); } %>
             </select>
           </div>
 
@@ -49,22 +47,27 @@
 
           <div class="form-element">
             <label for="to">To:</label>
-            <select name="currencies" id="to">
+            <select name="toCurrency" id="to">
               <!-- loop through an object -->
-              <% keys.forEach((key, index) => { %>
+              <% if(locals.result && locals.keys) { keys.forEach((key, index) =>
+              {%>
               <option value="<%= key %>">
                 <%= `${key} - ${result[key]}` %>
               </option>
-              <% }); %>
+              <% }); } %>
             </select>
           </div>
 
           <button type="submit">Convert</button>
         </form>
-
-        <p>1.00 British Pound =</p>
-        <p>1.258935 US Dollars</p>
-        <p>1 USD = 0.794322 GBP</p>
+        <%
+        if(locals.conversionRate&&locals.amount&&locals.baseCurr&&locals.conversionResult&&locals.targetCurr){
+        %>
+        <p class="result">Conversion rate = <%= conversionRate %></p>
+        <p class="result">
+          <%= `${amount} ${baseCurr} = ${conversionResult} ${targetCurr}` %>
+        </p>
+        <% } %>
       </div>
     </main>
 
