--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,5 +80,6 @@
       nomodule
       src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"
     ></script>
+    <script src="index1.js"></script>
   </body>
 </html>
