--- a/public/style.css
+++ b/public/style.css
@@ -40,6 +40,7 @@ body {
   box-shadow: 0 0 2rem rgba(0, 0, 0, 0.61);
   font-weight: 500;
   transition: all 0.3s;
+  animation: fadeIn 1s ease-in;
 }
 
 .switch-theme:hover {
@@ -64,11 +65,21 @@ main {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  animation: fadeIn 1s ease-in;
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 .container h1 {
   align-self: center;
-  font-size: 4rem;
+  font-size: 6rem;
 }
 
 .form {
@@ -78,8 +89,9 @@ main {
 }
 
 .form-element {
-  font-size: 2.4rem;
+  font-size: 3rem;
   display: flex;
+  flex-direction: column;
 }
 
 .swap-currencies-btn {
@@ -90,4 +102,11 @@ main {
   height: 2.4rem;
   width: 2.4rem;
   margin: 0;
+}
+
+/* INPUTS */
+
+.input {
+  font-size: 2.6rem;
+  border-radius: 0.8rem;
 }
